fix: update ::-webkit-scrollbar

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -55,6 +55,7 @@
 }
 
 .section-sidebar {
+  display: block;
   position: sticky;
   top: 12rem;
   height: calc(100vh - 12rem);
